Bug 114216 - Thousands separator check box incorrect after change from scientific to number
Summary: Thousands separator check box incorrect after change from scientific to number
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.1.0 target:6.0.0.1
Keywords:
Depends on:
Blocks: Sidebar-Properties-Number-Format
  Show dependency treegraph
 
Reported: 2017-12-03 02:01 UTC by Jim Raykowski
Modified: 2017-12-18 01:14 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2017-12-03 02:01:11 UTC
Here are steps to reproduce this bug.

1) Enter 123456 in a Calc cell
2) Check Thousands separator check box in the Sidebar Properties deck Number Format panel.
3) Select Scientific in Number Format panel dropdown.
4) Select Number in Number Format panel dropdown.
5) Thousands separator is checked but cell contents is not thousand separated.
6) Click on different cell and then back to test cell. Thousands separator is unchecked.

The fix to this bug is include in tdf#86085
Comment 1 Jim Raykowski 2017-12-04 00:59:10 UTC
The fix for this bug is no longer included in the patch mentioned above. 

Waiting on confirmation of this bug to submit a patch.
Comment 2 Yousuf Philips (jay) (retired) 2017-12-04 09:28:24 UTC
Yes please do fix the bug. I tested the fix included in the patch for tdf#86085 and it worked correctly.
Comment 3 m_a_riosv 2017-12-04 16:44:38 UTC
Works for me with:
Version: 6.0.0.0.alpha1+
Build ID: f94d98db1be8c27e470b39d4b16ed406db3aef87
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
Locale: es-ES (es_ES); Calc: group
Comment 4 Jim Raykowski 2017-12-08 08:36:23 UTC
This patch is different than the one included and then removed from the other bug fix.

https://gerrit.libreoffice.org/#/c/46072/
Comment 5 Commit Notification 2017-12-15 11:59:08 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=eee645a4c281a99247fa7ae6e34711283156c614

tdf#114216 Uncheck Thousands separator on Number category selection

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2017-12-15 16:24:04 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5769b301dc307d2019faf1a480b930182d03ba54&h=libreoffice-6-0

tdf#114216 Uncheck Thousands separator on Number category selection

It will be available in 6.0.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.