tdf#114216 Make 'Select a catagory of contents' update cell contents

and uncheck Thousands separator and Engineering notation checkboxes in
Number Format panel.

Current behavior when cell is in input mode and catagory in the Number
Format panel 'Select a catagory of contents' listbox is selected is that
cell contents does not update to catagory until cell input mode is
ended.

This patch ends input mode on 'Select a catagory of contents' catagory
selection and clears Thousands separator and Engineering notation
checkboxes in the Number Format panel.

Change-Id: Iaf616379fad1333d63bc397a9fba2220d7bbfc9b